@@ -1,3 +1,9 @@
+2024-09-10 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3779.c:
+	  Fix bug #3779.
+
 2024-09-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCval.c,
